--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "markrun-compile-webpack",
+  "name": "webpack-compiler",
   "version": "0.1.0",
-  "description": "markrun compile webpack",
+  "description": "webpack-compiler",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "./node_modules/mocha/bin/mocha --timeout 60000"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/markrun/markrun-compile-webpack.git"
+    "url": "git+https://github.com/markrun/webpack-compiler.git"
   },
   "keywords": [
     "markruncompile",
@@ -19,9 +19,9 @@
   "author": "nimojs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/markrun/markrun-compile-webpack/issues"
+    "url": "https://github.com/markrun/webpack-compiler/issues"
   },
-  "homepage": "https://github.com/markrun/markrun-compile-webpack#readme",
+  "homepage": "https://github.com/markrun/webpack-compiler#readme",
   "dependencies": {
     "deasync": "^0.1.8",
     "extend": "^3.0.0",
@@ -29,7 +29,10 @@
     "proxy-fs": "0.0.10"
   },
   "devDependencies": {
-    "markrun": "^0.3.0",
+    "css-loader": "^0.26.0",
+    "jsx-loader": "^0.13.2",
+    "mocha": "^3.1.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   }
 }
